# blacklist

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  setup.py
blacklist/: blacklist.py
