[metadata]
name = 'blacklist'
version = '0.0.1'
description = 'A command line tool used to filter, update and delete leftovers from debugging, testing or autogenerating code.'
author = 'jvinas'
author_email = 'jaimevp54@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/jaimevp54/blacklist'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
